# courseware

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/:   dependabot.yml
.github/workflows/: pages.yml
