[tool.poetry]
name = "dknog-courseware"
version = "0.1.0"
description = "Courseware for DKNOG"
authors = ["Mikkel Mondrup Kristensen <mikkel@tdx.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "9.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
